--- a/pas.html
+++ b/pas.html
@@ -48,7 +48,7 @@
     </section>
 
     <footer>
-        <p><a href="haxball.html">Ana Sayfaya Dön</a></p>
+        <p><a href="index.html">Ana Sayfaya Dön</a></p>
     </footer>
 </body>
 </html>
