--- a/sutcekme.html
+++ b/sutcekme.html
@@ -70,7 +70,7 @@
     </ul>
 
     <!-- Geri Dön Butonu -->
-    <a href="haxball.html" style="
+    <a href="index.html" style="
       display: inline-block;
       margin-top: 30px;
       padding: 10px 20px;
