--- a/topsurme.html
+++ b/topsurme.html
@@ -42,7 +42,7 @@
         </p>
     
         <!-- Geri Dön Butonu -->
-        <a href="haxball.html" style="
+        <a href="index.html" style="
           display: inline-block;
           margin-top: 20px;
           padding: 10px 20px;
