--- a/calimatma.html
+++ b/calimatma.html
@@ -69,7 +69,7 @@
     <div class="footer">
       <p>Instagram: <a href="https://instagram.com/haxballoynayantsubasa" target="_blank">@haxballoynayantsubasa</a></p>
       <p>© 2025 OzoraHaxball. Tüm hakları saklıdır.</p>
-      <p><a href="haxball.html">Ana Sayfaya Dön</a></p>
+      <p><a href="index.html">Ana Sayfaya Dön</a></p>
     </div>
   
 </body>
