--- a/alankapatma.html
+++ b/alankapatma.html
@@ -57,7 +57,7 @@
 
         <!-- Geri Dön Butonu -->
         <div class="back-button">
-            <a href="haxball.html" class="button">⬅️ Geri Dön</a>
+            <a href="index.html" class="button">⬅️ Geri Dön</a>
         </div>
 
     </div>
